--- a/style.css
+++ b/style.css
@@ -46,3 +46,27 @@ table {
 border-collapse: collapse;
 border-spacing: 0;
 }
+
+@media screen and (max-wdth: 960px) {
+  form,
+  {
+    text-align: center;
+  width:100%;
+  }
+}
+
+body {
+  background-color: #EEE8AA;
+  margin-left: auto;
+  margin-left: auto;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 35px;
+}
+
+h1 {
+  text-align:center;
+  font-size: 50px;
+  color: inherit;
+  padding-bottom: 20px;
+}
